# BabylonNativePlayground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  SceneInspector.h  main.cpp  package-lock.json  package.json  vcpkg.json
.github/workflows/: build.yml
AgentCLI/: AGENT_INSTRUCTIONS.md  agent_cli.py
Dependencies/: CMakeLists.txt
Dependencies/imgui/: CMakeLists.txt
Dependencies/imgui/Include/backends/: imgui_impl_babylon.h
Dependencies/imgui/Source/backends/: imgui_impl_babylon.cpp
Plugins/3dsMax/: .gitignore  Max2BabylonPreview.sln
Plugins/3dsMax/Max2BabylonPreview/: Descriptor.cs  GlobalUtility.cs  LivePreviewPanel.cs  Loader.cs  MaxChangeDetector.cs  MaxLivePreviewSession.cs  MaxMaterialMapper.cs  MaxObjectMapper.cs  MaxSceneExporter.cs
Plugins/3dsMax/Max2BabylonPreview/2026/: Max2BabylonPreview2026.csproj
Plugins/3dsMax/Refs/: README.md
Plugins/SharedProjects/LivePreview.Core/: ChangeThrottler.cs  LivePreview.Core.projitems  LivePreview.Core.shproj  LivePreviewSession.cs  RendererProcess.cs  SessionState.cs
Plugins/SharedProjects/LivePreview.ObjectMapping/: LivePreview.ObjectMapping.projitems  LivePreview.ObjectMapping.shproj  MappingReconciler.cs  ObjectMap.cs
Plugins/SharedProjects/LivePreview.Protocol/: CommandBuilder.cs  LivePreview.Protocol.projitems  LivePreview.Protocol.shproj  ProtocolClient.cs  ProtocolConstants.cs  WebSocketServer.cs
Scripts/: agent_bridge.js  game.js  playground.js
Scripts/Loaders/: load_sbsar.js  loader_env.js  loader_glb.js  loader_obj.js
Source/: PlaygroundPanel.cpp  PlaygroundPanel.h  SceneInspector.cpp  SceneInspector.h  SubstanceImporter.cpp  SubstanceImporter.h  main.cpp
